--- a/docs/guidelines/language/messaging/time-related-messages.mdx
+++ b/docs/guidelines/language/messaging/time-related-messages.mdx
@@ -15,87 +15,83 @@ description: Time-related messages help users understand how long processes take
 Use a specific time or time frame whenever possible.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- System update on Monday, August 22, 2025: 06:00–08:00
-</div>
-<div className="donts" markdown="true">
-- Upcoming system update: 22 August
-</div>
+  <div className="dos" markdown="true">
+    - System update on Monday, August 22, 2025: 06:00–08:00
+  </div>
+  <div className="donts" markdown="true">
+    - Upcoming system update: 22 August
+  </div>
 </div>
 
 Use the user’s time zone when providing any kind of time indication.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- Failed to synchronize data. Synchronized at 12:45 BST.
-- System maintenance scheduled for Wednesday, August 22: 02:00–04:00 BST
-</div>
+  <div className="dos" markdown="true">
+    - Failed to synchronize data. Synchronized at 12:45 BST. - System
+    maintenance scheduled for Wednesday, August 22: 02:00–04:00 BST
+  </div>
 </div>
 
 When necessary, add time zones with the UTC in brackets.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- Failed to synchronize data. Last successful sync: 12:45 BST (UTC+1)
-- System maintenance scheduled for Wednesday, August 22, 02:00–04:00 BST (UTC+1).
-</div>
+  <div className="dos" markdown="true">
+    - Failed to synchronize data. Last successful sync: 12:45 BST (UTC+1) -
+    System maintenance scheduled for Wednesday, August 22, 02:00–04:00 BST
+    (UTC+1).
+  </div>
 </div>
 
 Avoid generic time-related terms like later, soon, sometime, etc.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- Update starts Tuesday, October 1, 2026: 02:00–04:00
-</div>
-<div className="donts" markdown="true">
-- Update starts soon.
-- Update starts later today.
-- Update takes a few moments.
-- Update takes a while.
-</div>
+  <div className="dos" markdown="true">
+    - Update starts Tuesday, October 1, 2026: 02:00–04:00
+  </div>
+  <div className="donts" markdown="true">
+    - Update starts soon. - Update starts later today. - Update takes a few
+    moments. - Update takes a while.
+  </div>
 </div>
 
 Use "will" to indicate certainty and avoid "may" or "might" which sound uncertain.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- Update will take a few minutes.
-</div>
-<div className="donts" markdown="true">
-- Update may take a few minutes.
-- Update might take a few minutes.
-</div>
+  <div className="dos" markdown="true">
+    - Update will take a few minutes.
+  </div>
+  <div className="donts" markdown="true">
+    - Update may take a few minutes. - Update might take a few minutes.
+  </div>
 </div>
 
 Avoid adding messages when the process takes less than ten seconds.
 
 <div className="dos-and-donts" markdown="true">
-<div className="donts" markdown="true">
-- This process takes a few seconds.
-</div>
+  <div className="donts" markdown="true">
+    - This process takes a few seconds.
+  </div>
 </div>
 
 Use countdowns to alert users to time-sensitive information.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- Session expiring in 04:25 minutes.
-- Automatic logout in 03:45 minutes.
-- Meeting starts in 5 minutes.
-</div>
-<div className="donts" markdown="true">
-- Migration starts in 1 hour.
-</div>
+  <div className="dos" markdown="true">
+    - Session expiring in 04:25 minutes. - Automatic logout in 03:45 minutes. -
+    Meeting starts in 5 minutes.
+  </div>
+  <div className="donts" markdown="true">
+    - Migration starts in 1 hour.
+  </div>
 </div>
 
 Use consistent wording in the UI and add specific volumes with progress indicators.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- Data volume: 45/300 MB
-- Saving data… 50 of 300 MB saved
-- System update: 45% complete
-</div>
+  <div className="dos" markdown="true">
+    - Data volume: 45/300 MB - Saving data… 50 of 300 MB saved - System update:
+    45% complete
+  </div>
 </div>
 
 ## Rules for unknown time frames
@@ -103,22 +99,23 @@ Use consistent wording in the UI and add specific volumes with progress indicato
 Use a realistic time range or an estimated time window if possible.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- The system update can take a few hours.
-- The update will finish within the next 60 minutes.
-</div>
+  <div className="dos" markdown="true">
+    - The system update can take a few hours. - The update will finish within
+    the next 60 minutes.
+  </div>
 </div>
 
 Be transparent and use passive voice when you need to be unspecific.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- Due to the size of the data migration, it is estimated to take between 4-6 hours.
-- Data is being fetched from multiple sources, and the completion time varies depending on system conditions.
-</div>
-<div className="donts" markdown="true">
-- Due to the size of the migration, we have no idea when it will finish.
-</div>
+  <div className="dos" markdown="true">
+    - Due to the size of the data migration, it is estimated to take between 4-6
+    hours. - Data is being fetched from multiple sources, and the completion
+    time varies depending on system conditions.
+  </div>
+  <div className="donts" markdown="true">
+    - Due to the size of the migration, we have no idea when it will finish.
+  </div>
 </div>
 
 ## Rules for expectations and consequences
@@ -126,46 +123,41 @@ Be transparent and use passive voice when you need to be unspecific.
 Inform users whether or not they can continue working during a process.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- The application will not be available during the update. We’ll notify you when it’s ready.
-- The application is not available during the update.
-- You can continue working until the update begins.
-- Installation files are downloaded in the background.
-</div>
+  <div className="dos" markdown="true">
+    - The application will not be available during the update. We’ll notify you
+    when it’s ready. - The application is not available during the update. - You
+    can continue working until the update begins. - Installation files are
+    downloaded in the background.
+  </div>
 </div>
 
 Clearly communicate any consequences related to user actions (or inaction).
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- You can only postpone this update once.
-- An update is scheduled to automatically install tonight.
-- The installation will be updated tonight.
-- Update must be installed before Friday, September 12, 2026.
-- The device will restart during the update.
-</div>
+  <div className="dos" markdown="true">
+    - You can only postpone this update once. - An update is scheduled to
+    automatically install tonight. - The installation will be updated tonight. -
+    Update must be installed before Friday, September 12, 2026. - The device
+    will restart during the update.
+  </div>
 </div>
 
 Provide clear, actionable choices for next steps and user autonomy.
 
 <div className="dos-and-donts" markdown="true">
-<div className="dos" markdown="true">
-- Postpone
-- Remind me tomorrow
-- Update now
-- More information
-- Stop
-- Pause
-</div>
+  <div className="dos" markdown="true">
+    - Postpone - Remind me tomorrow - Update now - More information - Stop -
+    Pause
+  </div>
 </div>
 
 ## Dos and Don’ts
 
-* Do add user actions when possible, e.g. buttons or links
-* Don’t leave users wondering if the app is stuck or broken
-* Don’t guess unknown time frames
+- Do add user actions when possible, e.g. buttons or links
+- Don’t leave users wondering if the app is stuck or broken
+- Don’t guess unknown time frames
 
 ## Related
 
-* [Progress updates](./progress-updates.mdx)
-* [Time and time zones](../formatting/timezones.mdx)
+- [Progress updates](./progress-updates.mdx)
+- [Time and time zones](../formatting/timezones.mdx)
